css/style.css
/* main styles */
.wrapper {
  margin: auto;
  background-color: rgb(233, 233, 233);
  width: fit-content;
  border-radius: 5px;
}
/* cards styles */
.card-header {
  border-bottom: 1px solid #000;
  height: 30px;
  margin-top: 10px;
}
.card-content {
  font-family: serif;
}
.card-wrapper {
  width: 150px;
  height: 200px;
  border: 1px solid black;
  box-sizing: border-box;
  margin: auto;
  border-radius: 5px;
  background-color: white;

  text-align: center;
}
/* animation for cards */
.active {
  opacity: 1;
  animation: showBlock 500ms linear;
}
@keyframes showBlock {
  0% {
    transform: translateX(100%);
    opacity: 0;
  }
  100% {
    transform: translateX(0%);
    opacity: 1;
  }
}
/* buttons styles */

.btn {
  border: none;
  background-color: transparent;
  cursor: pointer;
}
.btn:hover {
  filter: invert(0.5);
  /* background-color: rgb(219, 219, 219); */
}

.nav {
  width: 150px;
  margin: auto;
  text-align: center;
}

button:active,
button:focus {
  outline: none;
  filter: invert(0.5) sepia(1);
}
/* icons styles */
.svg {
  width: 20px;
}
.icon-active {
  filter: invert(0.5) sepia(1);
}

